--- a/app/src/main/res/values/my_data.xml
+++ b/app/src/main/res/values/my_data.xml
@@ -20,4 +20,91 @@
 
     </string-array>
 
+    <string-array name="district0">
+        <item>อำเภอเมืองกระบี่</item>
+        <item>อำเภอเกาะพีพี</item>
+        <item>อำเภอเกาะลันตา</item>
+        <item>อำเภอเขาพนม</item>
+        <item>อำเภอเหนือคลอง</item>
+        <item>อำเภอคลองท่อม</item>
+        <item></item>
+    </string-array>
+
+    <string-array name="district1">
+        <item>อำเภอเมืองชุมพร</item>
+        <item>อำเภอท่าแซะ</item>
+        <item>อำเภอประทิว</item>
+        <item>อำเภอกระแสสินธุ์</item>
+        <item>อำเภอพะโต๊ะ</item>
+        <item>อำเภอละแม</item>
+        <item>อำเภอสวี</item>
+        <item>อำเภอหลังสวน</item>
+    </string-array>
+    <string-array name="district2">
+        <item>อำเภอเมืองตรัง</item>
+        <item>อำเภอกันตัง</item>
+        <item>อำเภอนาโยง</item>
+        <item>อำเภอปะเหลียน</item>
+        <item>อำเภอสิเกา</item>
+        <item>อำเภอห้วยยอด</item>
+    </string-array>
+
+    <string-array name="district3">
+
+        <item>test 1</item>
+        <item>test 2</item>
+        <item>test 3</item>
+        <item>test 4</item>
+        <item>test 5</item>
+    </string-array>
+    <string-array name="district4">
+        <item>test 1</item>
+        <item>test 2</item>
+        <item>test 3</item>
+        <item>test 4</item>
+        <item>test 5</item>
+    </string-array>
+    <string-array name="district5">
+        <item>test 1</item>
+        <item>test 2</item>
+        <item>test 3</item>
+        <item>test 4</item>
+        <item>test 5</item>
+    </string-array>
+    <string-array name="district6">
+        <item>test 1</item>
+        <item>test 2</item>
+        <item>test 3</item>
+        <item>test 4</item>
+        <item>test 5</item>
+    </string-array>
+    <string-array name="district7">
+        <item>test 1</item>
+        <item>test 2</item>
+        <item>test 3</item>
+        <item>test 4</item>
+        <item>test 5</item>
+    </string-array>
+    <string-array name="district8">
+        <item>test 1</item>
+        <item>test 2</item>
+        <item>test 3</item>
+        <item>test 4</item>
+        <item>test 5</item>
+    </string-array>
+    <string-array name="district9">
+        <item>test 1</item>
+        <item>test 2</item>
+        <item>test 3</item>
+        <item>test 4</item>
+        <item>test 5</item>
+    </string-array>
+    <string-array name="district10">
+        <item>test 1</item>
+        <item>test 2</item>
+        <item>test 3</item>
+        <item>test 4</item>
+        <item>test 5</item>
+    </string-array>
+
 </resources>
