--- a/app/src/main/res/values/my_data.xml
+++ b/app/src/main/res/values/my_data.xml
@@ -50,39 +50,48 @@
 
     <string-array name="district3">
 
-        <item>test 1</item>
-        <item>test 2</item>
-        <item>test 3</item>
-        <item>test 4</item>
-        <item>test 5</item>
+        <item>อำเภอเมืองนครศรีธรรมราช</item>
+        <item>อำเภอขนอม</item>
+        <item>อำเภอช้างกลาง</item>
+        <item>อำเภอท่าศาลา</item>
+        <item>อำเภอทุ่งสง</item>
+        <item>อำเภอนบพิตำ</item>
+        <item>อำเภอนาบอน</item>
+        <item>อำเภอปากพนัง</item>
+        <item>อำเภอพรหมคีรี</item>
+        <item>อำเภอสิชล</item>
+        <item>16 สถานที่เที่ยวนครศรีธรรมราช</item>
     </string-array>
     <string-array name="district4">
-        <item>test 1</item>
-        <item>test 2</item>
-        <item>test 3</item>
-        <item>test 4</item>
-        <item>test 5</item>
+        <item>อำเภอเมืองนราธิวาส</item>
+        <item>อำเภอตากใบ</item>
+        <item>อำเภอระแงะ</item>
+        <item>อำเภอสุไหงปาดี</item>
+        <item>อำเภอสุไหวโกลก</item>
     </string-array>
     <string-array name="district5">
-        <item>test 1</item>
-        <item>test 2</item>
-        <item>test 3</item>
-        <item>test 4</item>
-        <item>test 5</item>
+        <item>อำเภอเมืองปัตตานี</item>
+        <item>อำเภอโคกโพธิ์</item>
+        <item>อำเภอปะนาเระ</item>
+        <item>อำเภอยะหริ่ง</item>
+        <item>อำเภอสายบุรี</item>
+        <item>อำเภอหนองจิก</item>
+        <item>10 สถานที่ท่องเที่ยว ปัตตานี</item>
     </string-array>
     <string-array name="district6">
-        <item>test 1</item>
-        <item>test 2</item>
-        <item>test 3</item>
-        <item>test 4</item>
-        <item>test 5</item>
+        <item>อำเภอเกาะยาว</item>
+        <item>อำเภอเมืองพังงา</item>
+        <item>อำเภอคุระบุรี</item>
+        <item>อำเภอตะกั่วทุ่ง</item>
+        <item>อำเภอตะกั่วป่า</item>
+        <item>อำเภอท้ายเหมือง</item>
+        <item>10 สถานที่ท่องเที่ยวจังหวัดพังงา</item>
     </string-array>
     <string-array name="district7">
-        <item>test 1</item>
-        <item>test 2</item>
-        <item>test 3</item>
-        <item>test 4</item>
-        <item>test 5</item>
+        <item>อำเภอเขาชัยสน</item>
+        <item>อำเภอเมืองพัทลุง</item>
+        <item>อำเภอเขาชัยสน</item>
+        <item>10 สถานที่ท่องเที่ยวพัทลุง</item>
     </string-array>
     <string-array name="district8">
         <item>test 1</item>
@@ -92,39 +101,53 @@
         <item>test 5</item>
     </string-array>
     <string-array name="district9">
-        <item>test 1</item>
-        <item>test 2</item>
-        <item>test 3</item>
-        <item>test 4</item>
-        <item>test 5</item>
+        <item>อำเภอเมือง</item>
+        <item>อำเภอกระทู้</item>
+        <item>อำเภอถลาง</item>
+        <item>10 สถานที่ท่องเที่ยวภูเก็ต</item>
     </string-array>
     <string-array name="district10">
-        <item>test 1</item>
-        <item>test 2</item>
-        <item>test 3</item>
-        <item>test 4</item>
+        <item>อำเภอเบตง</item>
+        <item>อำเภอเมือง</item>
+        <item>อำเภอบันนังสตา</item>
+        <item>อำเภอรามัน</item>
         <item>test 5</item>
     </string-array>
     <string-array name="district11">
-        <item>test 1</item>
-        <item>test 2</item>
-        <item>test 3</item>
-        <item>test 4</item>
-        <item>test 5</item>
+        <item>อำเภอเมือง</item>
+        <item>อำเภอกระบุรี</item>
+        <item>อำเภอกะเปอร์</item>
+        <item>อำเภอละอุ่น</item>
+        <item>15 สถานที่ท่องเที่ยวระนอง </item>
     </string-array>
     <string-array name="district12">
-        <item>test 1</item>
-        <item>test 2</item>
-        <item>test 3</item>
-        <item>test 4</item>
-        <item>test 5</item>
+        <item>อำเภอเทพา</item>
+        <item>อำเภอเมืองสงขลา</item>
+        <item>อำเภอนาทวี</item>
+        <item>อำเภอสทิงพระ</item>
+        <item>อำเภอหาดใหญ่</item>
+        <item>10 สถานที่ท่องเที่ยวสงขลา</item>
     </string-array>
     <string-array name="district13">
-        <item>test 1</item>
-        <item>test 2</item>
-        <item>test 3</item>
-        <item>test 4</item>
-        <item>test 5</item>
+        <item>อำเภอเมืองสตูล</item>
+        <item>อำเภอควนโดน</item>
+        <item>อำเภอควนกาหลง</item>
+        <item>อำเภอทุ่งหว้า</item>
+        <item>อำเภอมะนัง</item>
+        <item>อำเภอละงู</item>
+        <item>อำเภออุทยานแห่งชาติตะรุเตา</item>
+        <item>10 สถานที่ท่องเที่ยวสตูล</item>
     </string-array>
-
+    <string-array name="district14">
+        <item>อำเภอเกาะพะงัน</item>
+        <item>อำเภอเกาะสมุย</item>
+        <item>อำเภอเมืองสุราษฏร์ธานี</item>
+        <item>อำเภอไชยา</item>
+        <item>อำเภอกาญจนดิษฐ์</item>
+        <item>อำเภอคิรีรัฐนิยม</item>
+        <item>อำเภอดอนสัก</item>
+        <item>อำเภอบ้านตาขุน</item>
+        <item>อำเภอพุนพิน</item>
+        <item>17 สถานที่ท่องเที่ยวสุราษฎร์ธานี</item>
+    </string-array>
 </resources>
