--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -13,7 +13,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/signup"
+        android:text="Sing up"
         android:id="@+id/textView"
         android:textSize="@dimen/h1"
         android:layout_centerHorizontal="true"
@@ -23,7 +23,7 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/signup"
+        android:text="sing up"
         android:id="@+id/button3"
         android:layout_alignParentBottom="true"
         android:onClick="clickSignUpSign" />
@@ -46,7 +46,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="@string/name"
+                android:text="Name"
                 android:id="@+id/textView2"
                 android:textSize="@dimen/h2"
                 android:layout_weight="1"
