--- a/app/src/main/res/layout/activity_province.xml
+++ b/app/src/main/res/layout/activity_province.xml
@@ -3,25 +3,49 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bg600"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="rmutp.wongdoywang.phichalai.toursouthchilchil.ProvinceActivity"
-    android:background="@drawable/bg600">
+    tools:context="rmutp.wongdoywang.phichalai.toursouthchilchil.ProvinceActivity">
 
     <TextView
+        android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/app_name"
-        android:id="@+id/textView6"
-        android:textSize="@dimen/h1"
         android:layout_centerHorizontal="true"
-        android:textColor="@color/text" />
+        android:text="@string/app_name"
+        android:textColor="@color/text"
+        android:textSize="@dimen/h1" />
+
+    <LinearLayout
+        android:layout_marginTop="10dp"
+        android:id="@+id/linear1"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/textView6">
+
+        <EditText
+            android:id="@+id/editText2"
+            android:layout_width="250dp"
+            android:hint="ค้นหาสถานที่"
+            android:layout_height="wrap_content"
+            android:textColorHint="@color/text" />
+<Button
+    android:id="@+id/search"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="5dp"
+    android:text="ค้นหา"/>
+
+    </LinearLayout>
 
     <ListView
+        android:layout_marginTop="10dp"
+        android:id="@+id/listView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/listView"
-        android:layout_below="@+id/textView6" />
+        android:layout_below="@id/linear1" />
 </RelativeLayout>
