--- a/app/src/main/res/layout/activity_district.xml
+++ b/app/src/main/res/layout/activity_district.xml
@@ -8,7 +8,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="rmutp.wongdoywang.phichalai.toursouthchilchil.DistrictActivity"
-    android:background="@drawable/bg600">
+    android:background="@drawable/wall1">
 
 
     <TextView
@@ -36,5 +36,9 @@
         android:layout_alignParentLeft="false"
         android:layout_alignParentTop="false"
         android:layout_alignParentBottom="true"
-        android:onClick="clickBackDistrict" />
+        android:onClick="clickBackDistrict"
+        android:background="#00bb8f"
+        android:textColor="#ffffff"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp" />
 </RelativeLayout>
