--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,29 +8,15 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="rmutp.wongdoywang.phichalai.toursouthchilchil.MainActivity"
-    android:background="@drawable/bg600">
+    android:background="@drawable/wall1">
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true">
+        android:layout_alignParentBottom="true"
+        android:id="@+id/linearLayout2">
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/signin"
-            android:id="@+id/button"
-            android:layout_weight="1"
-            android:onClick="clickSignInMain" />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="sing up"
-            android:id="@+id/button2"
-            android:layout_weight="1"
-            android:onClick="clickSignUpMain" />
     </LinearLayout>
 
     <LinearLayout
@@ -41,22 +27,25 @@
         android:layout_marginTop="60dp"
         android:gravity="center_horizontal"
         android:padding="20dp"
-        android:background="#82ffffff">
+        android:background="#82ffffff"
+        android:id="@+id/linearLayout">
 
         <ImageView
-            android:layout_width="@dimen/icon"
-            android:layout_height="@dimen/icon"
+            android:layout_width="130dp"
+            android:layout_height="130dp"
             android:id="@+id/imageView"
-            android:src="@drawable/restaurant512" />
+            android:contentDescription="photo"
+            android:src="@drawable/south" />
 
         <EditText
             android:layout_width="@dimen/edit"
-            android:layout_height="wrap_content"
+           android:layout_height="wrap_content"
             android:id="@+id/editText"
             android:hint="User : "
             android:inputType="text"
             android:textColor="@color/text"
-            android:textColorHint="@color/text" />
+            android:textColorHint="@color/text"
+            android:layout_marginTop="10dp" />
 
         <EditText
             android:layout_width="@dimen/edit"
@@ -68,5 +57,36 @@
             android:textColorHint="@color/text" />
 
     </LinearLayout>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/signin"
+        android:id="@+id/button"
+        android:layout_weight="1"
+        android:onClick="clickSignInMain"
+        android:textColor="#ffffff"
+        android:background="#00bb8f"
+        android:layout_below="@+id/linearLayout"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="42dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="sing up"
+        android:id="@+id/button2"
+        android:layout_weight="1"
+        android:onClick="clickSignUpMain"
+        android:background="#007bff"
+        android:textColor="#ffffff"
+        android:layout_below="@+id/button"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp" />
 
 </RelativeLayout>
