--- a/app/src/main/res/layout/detail_layout.xml
+++ b/app/src/main/res/layout/detail_layout.xml
@@ -3,107 +3,100 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg600">
+    android:background="@drawable/wall1">
 
     <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/scrollView" >
+        android:layout_height="match_parent">
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="New Text"
                 android:id="@+id/textView9"
-                android:layout_gravity="center_horizontal"
-                android:textSize="@dimen/h1"
-                android:textColor="@color/text" />
-
-            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="New Text"
-                android:id="@+id/textView10"
-                android:textSize="@dimen/h2"
                 android:layout_gravity="center_horizontal"
-                android:textColor="@color/text" />
+                android:text="New Text"
+                android:textColor="@color/text"
+                android:textSize="@dimen/h1" />
+
+            <TextView
+                android:id="@+id/textView10"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="New Text"
+                android:textColor="@color/text"
+                android:textSize="@dimen/h2" />
 
             <ImageView
+                android:id="@+id/imageView3"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
-                android:id="@+id/imageView3"
                 android:layout_gravity="center_horizontal" />
 
             <TextView
+                android:id="@+id/textView11"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Description:"
-                android:id="@+id/textView11"
-                android:textSize="@dimen/h2"
-                android:textStyle="bold"
                 android:layout_marginLeft="20dp"
-                android:textColor="@color/text" />
+                android:text="Description:"
+                android:textColor="@color/text"
+                android:textSize="@dimen/h2"
+                android:textStyle="bold" />
 
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="20dp">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="New Text"
-                    android:id="@+id/textView12"
-                    android:textSize="@dimen/h2"
-                    android:textColor="@color/text" />
-            </LinearLayout>
+            <TextView
+                android:id="@+id/textView12"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="New Text"
+                android:padding="20dp"
+                android:textColor="@color/text"
+                android:textSize="@dimen/h2"
+                android:background="#82ffffff" />
+
 
             <fragment
+                android:id="@+id/map"
+
+
+                android:name="com.google.android.gms.maps.SupportMapFragment"
+
+                android:layout_width="match_parent"
                 android:layout_height="200dp"
-
-
                 android:layout_margin="20dp"
 
-                android:id="@+id/map"
-                android:name="com.google.android.gms.maps.SupportMapFragment"
-                android:layout_width="match_parent"
-
                 tools:context="rmutp.wongdoywang.phichalai.toursouthchilchil.MapsActivity" />
-
 
 
             />
 
             <RatingBar
+                android:id="@+id/ratingBar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/ratingBar"
                 android:layout_gravity="center_horizontal" />
 
             <LinearLayout
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
                 <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Back"
-                    android:id="@+id/button6"
-                    android:layout_weight="1" />
-
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Range"
                     android:id="@+id/button7"
-                    android:layout_weight="1" />
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Range"
+                    android:background="#00bb8f"
+                    android:textColor="#ffffff"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp" />
             </LinearLayout>
 
         </LinearLayout>
