--- a/app/src/main/res/layout/my_listview.xml
+++ b/app/src/main/res/layout/my_listview.xml
@@ -8,7 +8,7 @@
         android:layout_height="50dp"
         android:id="@+id/imageView2"
         android:layout_margin="10dp"
-        android:src="@drawable/friend" />
+        android:src="@drawable/dd" />
 
     <TextView
         android:layout_width="wrap_content"
