--- a/app/src/main/res/layout/activity_district.xml
+++ b/app/src/main/res/layout/activity_district.xml
@@ -8,7 +8,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="rmutp.wongdoywang.phichalai.toursouthchilchil.DistrictActivity"
-    android:background="@drawable/wall1">
+    android:background="@drawable/beerza">
 
 
     <TextView
@@ -19,7 +19,11 @@
         android:textSize="@dimen/h1"
 
         android:layout_centerHorizontal="true"
-        android:textColor="@color/text" />
+        android:textColor="@color/text"
+        android:shadowColor="#333333"
+        android:shadowDx="3"
+        android:shadowDy="2"
+        android:shadowRadius="1"/>
 
     <ListView
         android:layout_width="wrap_content"
@@ -37,7 +41,7 @@
         android:layout_alignParentTop="false"
         android:layout_alignParentBottom="true"
         android:onClick="clickBackDistrict"
-        android:background="#00bb8f"
+        android:background="@drawable/button_shape"
         android:textColor="#ffffff"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp" />
