--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,90 +3,91 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="rmutp.wongdoywang.phichalai.toursouthchilchil.MainActivity"
-    android:background="@drawable/wall1">
+    android:background="@drawable/beerza"
+    tools:context="rmutp.wongdoywang.phichalai.toursouthchilchil.MainActivity">
 
     <LinearLayout
-        android:orientation="horizontal"
+        android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:id="@+id/linearLayout2">
+        android:orientation="horizontal">
 
     </LinearLayout>
 
     <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="60dp"
+        android:background="#70ffffff"
         android:gravity="center_horizontal"
-        android:padding="20dp"
-        android:background="#82ffffff"
-        android:id="@+id/linearLayout">
+        android:orientation="vertical"
+        android:padding="20dp">
 
         <ImageView
+            android:id="@+id/imageView"
             android:layout_width="130dp"
             android:layout_height="130dp"
-            android:id="@+id/imageView"
+            android:layout_marginTop="50dp"
             android:contentDescription="photo"
             android:src="@drawable/south" />
 
         <EditText
-            android:layout_width="@dimen/edit"
-           android:layout_height="wrap_content"
             android:id="@+id/editText"
-            android:hint="User : "
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="50dp"
+            android:hint="Username "
             android:inputType="text"
+            android:paddingLeft="5dp"
             android:textColor="@color/text"
-            android:textColorHint="@color/text"
-            android:layout_marginTop="10dp" />
+            android:textColorHint="@color/textGray" />
 
         <EditText
-            android:layout_width="@dimen/edit"
-            android:layout_height="wrap_content"
             android:id="@+id/editText2"
-            android:hint="Password :"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
+            android:hint="Password"
             android:inputType="textPassword"
+            android:paddingLeft="5dp"
             android:textColor="@color/text"
-            android:textColorHint="@color/text" />
+            android:textColorHint="@color/textGray" />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_below="@+id/linearLayout"
+            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="30dp"
+            android:background="@drawable/button_shape"
+            android:onClick="clickSignInMain"
+            android:text="@string/signin"
+            android:textColor="#ffffff" />
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/button"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/button_shape1"
+            android:onClick="clickSignUpMain"
+            android:text="sing up"
+            android:textColor="#ffffff" />
 
     </LinearLayout>
-
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/signin"
-        android:id="@+id/button"
-        android:layout_weight="1"
-        android:onClick="clickSignInMain"
-        android:textColor="#ffffff"
-        android:layout_below="@+id/linearLayout"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="42dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:background="@drawable/button_shape" />
-
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="sing up"
-        android:id="@+id/button2"
-        android:layout_weight="1"
-        android:onClick="clickSignUpMain"
-        android:background="@drawable/button_shape1"
-        android:textColor="#ffffff"
-        android:layout_below="@+id/button"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp" />
 
 </RelativeLayout>
