--- a/app/src/main/res/layout/activity_province.xml
+++ b/app/src/main/res/layout/activity_province.xml
@@ -3,11 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/wall1"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/beerza"
+
     tools:context="rmutp.wongdoywang.phichalai.toursouthchilchil.ProvinceActivity">
 
     <TextView
@@ -17,7 +14,11 @@
         android:layout_centerHorizontal="true"
         android:text="@string/app_name"
         android:textColor="@color/text"
-        android:textSize="@dimen/h1" />
+        android:textSize="@dimen/h1"
+        android:shadowColor="#333333"
+        android:shadowDx="3"
+        android:shadowDy="2"
+        android:shadowRadius="1"/>
 
     <ListView
         android:id="@+id/listView"
@@ -25,4 +26,5 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/textView6"
         android:layout_marginTop="10dp" />
+
 </RelativeLayout>
