--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -3,45 +3,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="rmutp.wongdoywang.phichalai.toursouthchilchil.SignUpActivity"
-    android:background="@drawable/wall1">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Sing up"
-        android:id="@+id/textView"
-        android:textSize="@dimen/h1"
-        android:layout_centerHorizontal="true"
-        android:textColor="@color/text"
-        android:textColorHint="@color/text" />
-
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="sing up"
-        android:id="@+id/button3"
-        android:layout_alignParentBottom="true"
-        android:onClick="clickSignUpSign"
-        android:background="#007bff"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:textColor="#ffffff" />
-
+    android:background="@drawable/beerza">
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/textView"
-        android:layout_above="@+id/button3"
-        android:layout_margin="15dp"
+        android:layout_height="fill_parent"
         android:padding="20dp"
         android:background="#82ffffff">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sing up"
+            android:id="@+id/textView"
+            android:textSize="@dimen/h1"
+            android:layout_centerHorizontal="true"
+            android:textColor="@color/text"
+            android:textColorHint="@color/text"
+            android:layout_marginLeft="100dp"
+            android:shadowColor="#333333"
+            android:shadowDx="3"
+            android:shadowDy="2"
+            android:shadowRadius="1"
+            />
 
         <LinearLayout
             android:orientation="horizontal"
@@ -56,7 +42,12 @@
                 android:textSize="@dimen/h2"
                 android:layout_weight="1"
                 android:textColor="@color/text"
-                android:textColorHint="@color/text" />
+                android:textColorHint="@color/text"
+                android:shadowColor="#333333"
+                android:shadowDx="3"
+                android:shadowDy="2"
+                android:shadowRadius="1"
+                />
 
             <EditText
                 android:layout_width="0dp"
@@ -81,7 +72,11 @@
                 android:textSize="@dimen/h2"
                 android:layout_weight="1"
                 android:textColor="@color/text"
-                android:textColorHint="@color/text" />
+                android:textColorHint="@color/text"
+                android:shadowColor="#333333"
+                android:shadowDx="3"
+                android:shadowDy="2"
+                android:shadowRadius="1"/>
 
             <EditText
                 android:layout_width="0dp"
@@ -106,7 +101,11 @@
                 android:textSize="@dimen/h2"
                 android:layout_weight="1"
                 android:textColor="@color/text"
-                android:textColorHint="@color/text" />
+                android:textColorHint="@color/text"
+                android:shadowColor="#333333"
+                android:shadowDx="3"
+                android:shadowDy="2"
+                android:shadowRadius="1"/>
 
             <EditText
                 android:layout_width="0dp"
@@ -131,7 +130,11 @@
                 android:textSize="@dimen/h2"
                 android:layout_weight="1"
                 android:textColor="@color/text"
-                android:textColorHint="@color/text" />
+                android:textColorHint="@color/text"
+                android:shadowColor="#333333"
+                android:shadowDx="3"
+                android:shadowDy="2"
+                android:shadowRadius="1"/>
 
             <EditText
                 android:layout_width="0dp"
@@ -141,6 +144,22 @@
                 android:layout_weight="2"
                 android:textColor="@color/text"
                 android:textColorHint="@color/text" />
+
         </LinearLayout>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="sing up"
+            android:id="@+id/button3"
+            android:layout_alignParentBottom="true"
+            android:onClick="clickSignUpSign"
+            android:background="@drawable/button_shape1"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:textColor="#ffffff"
+            android:layout_marginTop="80dp" />
     </LinearLayout>
+
+
 </RelativeLayout>
