--- a/app/src/main/res/layout/activity_tour.xml
+++ b/app/src/main/res/layout/activity_tour.xml
@@ -3,49 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/wall1"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/beerza"
     tools:context="rmutp.wongdoywang.phichalai.toursouthchilchil.TourActivity">
-
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:text="New Text"
-        android:textColor="@color/text"
-        android:textSize="30sp"
-        android:textStyle="bold" />
-
-    <LinearLayout
-        android:id="@+id/linear1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/textView8"
-        android:layout_marginTop="10dp"
-        android:orientation="horizontal">
-
-        <EditText
-            android:id="@+id/editText2"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:hint="ค้นหาสถานที่"
-            android:imeOptions="actionDone"
-            android:textColorHint="@color/text" />
-
-        <Button
-            android:id="@+id/search"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:text="ค้นหา"
-            android:background="#168eff"
-            android:textColor="#ffffff" />
-
-    </LinearLayout>
 
     <Button
         android:id="@+id/button5"
@@ -57,9 +16,45 @@
         android:layout_alignWithParentIfMissing="false"
         android:onClick="clickBackTour"
         android:text="Back"
-        android:background="#00bb8f"
+        android:background="@drawable/button_shape"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:text="New Text"
+        android:textColor="@color/text"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        android:shadowColor="#333333"
+        android:shadowDx="3"
+        android:shadowDy="2"
+        android:shadowRadius="1"
+        />
+
+    <EditText
+        android:id="@+id/editText2"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:hint="ค้นหาสถานที่"
+        android:imeOptions="actionDone"
+        android:textColorHint="@color/text"
+        android:layout_marginTop="50dp"
+        android:layout_marginLeft="20dp" />
+
+    <Button
+        android:id="@+id/search"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="280dp"
+        android:text="ค้นหา"
+        android:background="#168eff"
+        android:textColor="#ffffff"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="50dp" />
 
     <ListView
         android:id="@+id/listView3"
@@ -69,5 +64,18 @@
         android:layout_alignParentBottom="false"
         android:layout_alignParentLeft="false"
         android:layout_alignParentTop="false"
-        android:layout_below="@+id/linear1" />
+        android:layout_below="@+id/linear1"
+
+        android:layout_marginTop="50dp" />
+
+    <LinearLayout
+        android:id="@+id/linear1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/textView8"
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal">
+
+    </LinearLayout>
+
 </RelativeLayout>
