--- a/app/src/main/res/layout/detail_layout.xml
+++ b/app/src/main/res/layout/detail_layout.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/wall1">
+    android:background="@drawable/beerza">
 
     <ScrollView
         android:id="@+id/scrollView"
@@ -93,7 +93,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Range"
-                    android:background="#00bb8f"
+                    android:background="@drawable/button_shape"
                     android:textColor="#ffffff"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp" />
