--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#FF4081</color>
 
 
-    <color name="text">#4A2D00</color>
+    <color name="text">#FFFFFF</color>
+    <color name="textGray">#6b6969</color>
 </resources>
