--- a/app/src/main/res/layout/activity_district.xml
+++ b/app/src/main/res/layout/activity_district.xml
@@ -3,9 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="rmutp.wongdoywang.phichalai.toursouthchilchil.DistrictActivity"
     android:background="@drawable/beerza">
@@ -25,24 +22,25 @@
         android:shadowDy="2"
         android:shadowRadius="1"/>
 
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/listView2"
-        android:layout_below="@+id/textView7"
-        android:layout_above="@+id/button4" />
-
-    <Button
+    <LinearLayout
+        android:id="@+id/linearLayout4"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="back"
-        android:id="@+id/button4"
-        android:layout_alignParentLeft="false"
-        android:layout_alignParentTop="false"
-        android:layout_alignParentBottom="true"
-        android:onClick="clickBackDistrict"
-        android:background="@drawable/button_shape"
-        android:textColor="#ffffff"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp" />
+        android:layout_height="fill_parent"
+        android:layout_centerHorizontal="true"
+        android:background="#70ffffff"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        android:padding="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="20dp" >
+
+        <ListView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/listView2"
+            android:layout_below="@+id/textView7" />
+    </LinearLayout>
+
 </RelativeLayout>
