--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,11 @@
         android:background="#70ffffff"
         android:gravity="center_horizontal"
         android:orientation="vertical"
-        android:padding="20dp">
+        android:padding="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="20dp">
 
         <ImageView
             android:id="@+id/imageView"
@@ -36,28 +40,29 @@
         <EditText
             android:id="@+id/editText"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="50dp"
             android:hint="Username "
             android:inputType="text"
             android:paddingLeft="5dp"
-            android:textColor="@color/text"
-            android:textColorHint="@color/textGray" />
+            android:textColor="#000000"
+            android:textColorHint="@color/textGray"
+            android:background="#ffffff" />
 
         <EditText
             android:id="@+id/editText2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="fill_parent"
+            android:layout_height="40dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp"
             android:hint="Password"
             android:inputType="textPassword"
             android:paddingLeft="5dp"
-            android:textColor="@color/text"
-            android:textColorHint="@color/textGray" />
+            android:textColor="#000000"
+            android:textColorHint="@color/textGray"
+            android:background="#ffffff" />
 
         <Button
             android:id="@+id/button"
