--- a/app/src/main/res/layout/activity_tour.xml
+++ b/app/src/main/res/layout/activity_tour.xml
@@ -6,23 +6,9 @@
     android:background="@drawable/beerza"
     tools:context="rmutp.wongdoywang.phichalai.toursouthchilchil.TourActivity">
 
-    <Button
-        android:id="@+id/button5"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="false"
-        android:layout_alignParentRight="false"
-        android:layout_alignWithParentIfMissing="false"
-        android:onClick="clickBackTour"
-        android:text="Back"
-        android:background="@drawable/button_shape"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp" />
-
     <TextView
         android:id="@+id/textView8"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:text="New Text"
@@ -33,7 +19,8 @@
         android:shadowDx="3"
         android:shadowDy="2"
         android:shadowRadius="1"
-        />
+        android:paddingLeft="120dp"
+        android:background="#ff0000" />
 
     <EditText
         android:id="@+id/editText2"
@@ -56,26 +43,40 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="50dp" />
 
-    <ListView
-        android:id="@+id/listView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/button5"
-        android:layout_alignParentBottom="false"
-        android:layout_alignParentLeft="false"
-        android:layout_alignParentTop="false"
-        android:layout_below="@+id/linear1"
-
-        android:layout_marginTop="50dp" />
-
     <LinearLayout
-        android:id="@+id/linear1"
+        android:id="@+id/linearLayout5"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/textView8"
-        android:layout_marginTop="10dp"
-        android:orientation="horizontal">
+        android:layout_height="fill_parent"
+        android:layout_centerHorizontal="true"
+        android:background="#70ffffff"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        android:padding="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="120dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="20dp" >
 
+        <ListView
+            android:id="@+id/listView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="false"
+            android:layout_alignParentLeft="false"
+            android:layout_alignParentTop="false"
+            android:layout_below="@+id/linear1"
+
+            />
+
+        <LinearLayout
+            android:id="@+id/linear1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/textView8"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
+
+        </LinearLayout>
     </LinearLayout>
 
 </RelativeLayout>
