--- a/app/src/main/res/layout/activity_district.xml
+++ b/app/src/main/res/layout/activity_district.xml
@@ -11,12 +11,11 @@
     <LinearLayout
         android:id="@+id/linearLayout6"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="55dp"
         android:layout_centerHorizontal="true"
-        android:background="#ff0000"
+        android:background="#9d00ff"
         android:gravity="center_horizontal"
-        android:orientation="vertical"
-        android:layout_marginBottom="520dp">
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="wrap_content"
