--- a/app/src/main/res/layout/detail_layout.xml
+++ b/app/src/main/res/layout/detail_layout.xml
@@ -22,7 +22,7 @@
                 android:layout_width="200dp"
                 android:layout_height="200dp"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="110dp" />
+                android:layout_marginTop="90dp" />
 
             <TextView
                 android:id="@+id/textView11"
@@ -37,8 +37,7 @@
                 android:shadowDx="3"
                 android:shadowDy="2"
                 android:shadowRadius="1"
-                android:background="#ff9900"
-                android:layout_marginTop="20dp" />
+                android:background="#00a2ff" />
 
 
             <TextView
@@ -47,11 +46,11 @@
                 android:layout_height="wrap_content"
                 android:text="New Text"
                 android:padding="20dp"
-                android:textColor="#FFFFFF"
-                android:textSize="@dimen/h2"
-                android:background="#0cb900"
+                android:textColor="#000000"
+                android:textSize="16dp"
+                android:background="#ffffff"
 
-                android:shadowColor="#333333"
+                android:shadowColor="#FFFFFF"
                 android:shadowDx="3"
                 android:shadowDy="2"
                 android:shadowRadius="1"
@@ -102,12 +101,11 @@
     <LinearLayout
         android:id="@+id/linearLayout8"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="47dp"
         android:layout_centerHorizontal="true"
-        android:background="#ff0000"
+        android:background="#9d00ff"
         android:gravity="center_horizontal"
-        android:orientation="vertical"
-        android:layout_marginBottom="520dp" >
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/textView9"
@@ -126,13 +124,12 @@
     <LinearLayout
         android:id="@+id/linearLayout9"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="40dp"
         android:layout_centerHorizontal="true"
-        android:background="#002fff"
+        android:background="#80caa6"
         android:gravity="center_horizontal"
         android:orientation="vertical"
-        android:layout_marginTop="48dp"
-        android:layout_marginBottom="480dp">
+        android:layout_marginTop="48dp">
 
         <TextView
             android:id="@+id/textView10"
