--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -7,11 +7,13 @@
     android:background="@drawable/beerza">
 
     <LinearLayout
-        android:orientation="vertical"
+        android:id="@+id/linearLayout10"
         android:layout_width="match_parent"
-        android:layout_height="fill_parent"
-        android:padding="20dp"
-        android:background="#82ffffff">
+        android:layout_height="47dp"
+        android:layout_centerHorizontal="true"
+        android:background="#0011ff"
+        android:gravity="center_horizontal"
+        android:orientation="vertical" >
 
         <TextView
             android:layout_width="wrap_content"
@@ -22,12 +24,38 @@
             android:layout_centerHorizontal="true"
             android:textColor="@color/text"
             android:textColorHint="@color/text"
-            android:layout_marginLeft="100dp"
             android:shadowColor="#333333"
             android:shadowDx="3"
             android:shadowDy="2"
             android:shadowRadius="1"
             />
+    </LinearLayout>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="sing up"
+        android:id="@+id/button3"
+        android:layout_alignParentBottom="true"
+        android:onClick="clickSignUpSign"
+        android:background="@drawable/button_shape1"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:textColor="#ffffff"
+        android:layout_marginTop="80dp"
+        android:layout_marginBottom="200dp" />
+
+    <LinearLayout
+        android:id="@+id/linearLayout11"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:background="#70ffffff"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        android:padding="20dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginLeft="20dp">
 
         <LinearLayout
             android:orientation="horizontal"
@@ -41,9 +69,9 @@
                 android:id="@+id/textView2"
                 android:textSize="@dimen/h2"
                 android:layout_weight="1"
-                android:textColor="@color/text"
+                android:textColor="#000000"
                 android:textColorHint="@color/text"
-                android:shadowColor="#333333"
+                android:shadowColor="#FFFFFF"
                 android:shadowDx="3"
                 android:shadowDy="2"
                 android:shadowRadius="1"
@@ -55,14 +83,14 @@
                 android:id="@+id/editText3"
                 android:inputType="text"
                 android:layout_weight="2"
-                android:textColor="@color/text"
-                android:textColorHint="@color/text" />
+                android:textColor="#000000"
+                android:textColorHint="#000000" />
         </LinearLayout>
 
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content">
 
             <TextView
                 android:layout_width="0dp"
@@ -71,9 +99,9 @@
                 android:id="@+id/textView3"
                 android:textSize="@dimen/h2"
                 android:layout_weight="1"
-                android:textColor="@color/text"
+                android:textColor="#000000"
                 android:textColorHint="@color/text"
-                android:shadowColor="#333333"
+                android:shadowColor="#FFFFFF"
                 android:shadowDx="3"
                 android:shadowDy="2"
                 android:shadowRadius="1"/>
@@ -84,14 +112,14 @@
                 android:id="@+id/editText4"
                 android:inputType="text"
                 android:layout_weight="2"
-                android:textColor="@color/text"
-                android:textColorHint="@color/text" />
+                android:textColor="#000000"
+                android:textColorHint="#000000" />
         </LinearLayout>
 
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content">
 
             <TextView
                 android:layout_width="0dp"
@@ -100,9 +128,9 @@
                 android:id="@+id/textView4"
                 android:textSize="@dimen/h2"
                 android:layout_weight="1"
-                android:textColor="@color/text"
+                android:textColor="#000000"
                 android:textColorHint="@color/text"
-                android:shadowColor="#333333"
+                android:shadowColor="#FFFFFF"
                 android:shadowDx="3"
                 android:shadowDy="2"
                 android:shadowRadius="1"/>
@@ -113,14 +141,14 @@
                 android:id="@+id/editText5"
                 android:inputType="text"
                 android:layout_weight="2"
-                android:textColor="@color/text"
-                android:textColorHint="@color/text" />
+                android:textColor="#000000"
+                android:textColorHint="#000000" />
         </LinearLayout>
 
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content">
 
             <TextView
                 android:layout_width="0dp"
@@ -129,9 +157,9 @@
                 android:id="@+id/textView5"
                 android:textSize="@dimen/h2"
                 android:layout_weight="1"
-                android:textColor="@color/text"
+                android:textColor="#000000"
                 android:textColorHint="@color/text"
-                android:shadowColor="#333333"
+                android:shadowColor="#FFFFFF"
                 android:shadowDx="3"
                 android:shadowDy="2"
                 android:shadowRadius="1"/>
@@ -142,23 +170,10 @@
                 android:id="@+id/editText6"
                 android:inputType="text"
                 android:layout_weight="2"
-                android:textColor="@color/text"
-                android:textColorHint="@color/text" />
+                android:textColor="#000000"
+                android:textColorHint="#000000" />
 
         </LinearLayout>
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="sing up"
-            android:id="@+id/button3"
-            android:layout_alignParentBottom="true"
-            android:onClick="clickSignUpSign"
-            android:background="@drawable/button_shape1"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:textColor="#ffffff"
-            android:layout_marginTop="80dp" />
     </LinearLayout>
 
 
