--- a/app/src/main/res/layout/activity_tour.xml
+++ b/app/src/main/res/layout/activity_tour.xml
@@ -16,13 +16,13 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/textView8"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
+            android:layout_height="50dp"
             android:text="New Text"
+            android:id="@+id/textView8"
+            android:textSize="@dimen/h1"
+            android:layout_centerHorizontal="true"
             android:textColor="@color/text"
-            android:textSize="30sp"
             android:shadowColor="#333333"
             android:shadowDx="3"
             android:shadowDy="2"
